# FastAPI-Wishlist

./: .gitignore  README.md  docker-compose.yml  setup.cfg
app/: Dockerfile  database.py  main.py  pyproject.toml
app/carts/: crud.py  models.py  schemas.py
app/carts/api/: v1.py
app/comments/: crud.py  models.py  schemas.py
app/comments/api/: v1.py
app/comments/tests/: test_comments.py
app/orders/: crud.py  models.py  schemas.py
app/orders/api/: v1.py
app/orders/tests/: test_orders.py
app/products/: crud.py  models.py  schemas.py
app/products/api/: v1.py
app/products/tests/: test_product.py
app/users/: authentication.py  crud.py  models.py  schemas.py
app/users/api/: v1.py
