[tool.poetry]
name = "wish-list"
version = "0.1.0"
description = ""
authors = ["Shayan-9248 <shayan.aimoradii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
black = "^22.6.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
